Fix always showing scrollbars
On any system with showing scrollbars, the table were always getting it,
as overflow: scroll says that you HAVE scroll. overflow: auto says to
the browser that we might have a scroll bar.

--- a/app/_assets/_scss/_base.typography.scss
+++ b/app/_assets/_scss/_base.typography.scss
@@ -109,7 +109,7 @@ table{
     text-align: center;
 
     display: block;
-    overflow: scroll;
+    overflow: auto;
     -webkit-overflow-scrolling: touch; /* smooth iOS scrolling */
 
     th,
